<resources>
    <string name="app_name">Kotlin5-6_online</string>
    <string name="enter_about_yourself">Enter about yourself</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_number">Enter your number</string>
    <string name="number">Number</string>
    <string name="division">/</string>
    <string name="multiple">*</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="dca">DCA</string>
    <string name="mars">Mars</string>
    <string name="flights">Flights</string>
    <string name="switch_text">Switch</string>
    <string name="open_website">Open Website</string>
    <string name="dial_number">Dial Number</string>
    <string name="add_string">Add</string>
    <string name="enter_value">Enter Value</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="cancel">Cancel</string>
    <string name="ok">ok</string>
    <string name="alert_dialog">Alert Dialog</string>
    <string name="interface_interaction">Interface Interaction</string>
    <string name="activity_lifecyle">Activity Lifecyle</string>
    <string name="constraint_layout">Constraint Layout</string>
    <string name="move">Move</string>
    <string name="second_fragment">Second Fragment</string>
    <string name="move_to_first">Move to first</string>
    <string name="show_toast">Show Toast</string>
    <string name="show_snackbar">Show Snackbar</string>
</resources>